cabal-version:      3.0
name:               plutarch-quickcheck
version:            2.2.2
synopsis:           Quickcheck for Plutarch.
description:
  Bridge between QuickCheck and Plutarch. The interfaces provide
  easy ways to construct properties about Plutarch functions.

homepage:           https://github.com/Liqwid-Labs/plutarch-quickcheck
bug-reports:        https://github.com/Liqwid-Labs/plutarch-quickcheck/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Seungheon Oh
maintainer:         Seungheon Oh <seungheon@mlabs.city>
copyright:          (C) 2022 Liqwid Labs
category:           Test
build-type:         Simple
tested-with:        GHC ==9.2.4
extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/Liqwid-Labs/plutarch-quickcheck

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wredundant-constraints -Wmissing-export-lists -Werror

  build-depends:
    , base      ^>=4.16
    , plutarch

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    NoFieldSelectors

  default-language:   Haskell2010

common common-tests
  import:        common-lang
  ghc-options:   -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , bytestring
    , generics-sop
    , plutarch-quickcheck
    , QuickCheck
    , tasty
    , tasty-expected-failure
    , tasty-quickcheck

-- Libraries

library
  import:          common-lang
  exposed-modules:
    Plutarch.Test.QuickCheck
    Plutarch.Test.QuickCheck.Instances
    Plutarch.Test.QuickCheck.Modifiers

  other-modules:
    Plutarch.Test.QuickCheck.Function
    Plutarch.Test.QuickCheck.Helpers
    Plutarch.Test.QuickCheck.Internal

  build-depends:
    , bytestring
    , containers
    , data-default
    , generics-sop
    , mtl
    , plutarch-extra
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck
    , tagged
    , tasty
    , tasty-expected-failure
    , tasty-quickcheck
    , text
    , universe

  hs-source-dirs:  src

-- Tests

test-suite reverse-test
  import:
    common-tests,
    common-lang

  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: sample/reverse-test

test-suite zip-test
  import:
    common-tests,
    common-lang

  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: sample/zip-test

test-suite validator-test
  import:
    common-tests,
    common-lang

  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: sample/validator-test

test-suite instances
  import:
    common-tests,
    common-lang

  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Helpers
    Value

  build-depends:
    , plutus-ledger-api
    , plutus-tx
    , pretty-show

  hs-source-dirs: test/instances
